[gd_scene load_steps=7 format=3 uid="uid://c6qeyf2r0m17i"]

[ext_resource type="Script" uid="uid://buwhl7osubf2i" path="res://MiniGames/Tomato/tomato_game.gd" id="1_70y2u"]
[ext_resource type="PackedScene" uid="uid://3bed30hd5xan" path="res://MiniGames/Tomato/TomSpawner/bullet_spawner.tscn" id="1_o73qf"]
[ext_resource type="PackedScene" uid="uid://yk53844viyr2" path="res://MiniGames/Tomato/DodgeTomato/dodge_tomato.tscn" id="2_5lwwx"]
[ext_resource type="Texture2D" uid="uid://d3hisntly3gvn" path="res://Art Assets/Mini Games/Dodgefruit/tomato_dodge.PNG" id="2_uadv7"]
[ext_resource type="AudioStream" uid="uid://bbl0ssoejcg0y" path="res://Sounds/tada.wav" id="4_umhm5"]
[ext_resource type="AudioStream" uid="uid://ca8wx37rwj1b7" path="res://Sounds/159408__noirenex__life-lost-game-over.wav" id="5_qbe2e"]

[node name="TomatoGame" type="Node2D"]
script = ExtResource("1_70y2u")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(795, 517)
scale = Vector2(10, 10)
texture = ExtResource("2_uadv7")

[node name="player_topdown" parent="." instance=ExtResource("2_5lwwx")]
position = Vector2(791, 521)

[node name="DamageCooldown" type="Timer" parent="player_topdown"]
one_shot = true

[node name="BulletSpawner" parent="." instance=ExtResource("1_o73qf")]
position = Vector2(729, -69)

[node name="BulletSpawner2" parent="." instance=ExtResource("1_o73qf")]
position = Vector2(791, 1050)

[node name="GameTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="WinSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_umhm5")
volume_db = -23.31

[node name="LooseSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qbe2e")
volume_db = -11.534
pitch_scale = 1.1

[connection signal="been_hit" from="player_topdown" to="." method="_on_player_topdown_been_hit"]
[connection signal="timeout" from="player_topdown/DamageCooldown" to="player_topdown" method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_timer_timeout"]
